zl_parser.output
Terminals unused in grammar

   '@'
   '.'
   T_PTR_OP
   T_CONSTANT_DOUBLE
   T_STRUCT
   T_STRUCT_DEFINED
   T_ELLIPSIS
   T_STRING
   T_VAR
   T_PARAM_SEPARATOR


State 349 conflicts: 1 shift/reduce


Grammar

    0 $accept: program_list $end

    1 program_list: program program_list
    2             | %empty

    3 program: declaration_statement
    4        | declaration_function

    5 statement_list: statement statement_list
    6               | %empty

    7 statement: compound_statement
    8          | expression_statement
    9          | buildin_statement
   10          | selection_statement
   11          | labeled_statement
   12          | jump_statement
   13          | declaration_statement
   14          | assembler_statement

   15 $@1: %empty

   16 compound_statement: '{' $@1 statement_list '}'

   17 assembler_statement: T_ASM assembler_command_list '}'

   18 assembler_command_list: assembler_command '\n' assembler_command_list
   19                       | labeled_statement assembler_command_list
   20                       | assembler_command

   21 assembler_command: T_GOTO T_LABEL
   22                  | T_OPERATOR operator_parameter ',' operator_parameter
   23                  | T_OPERATOR operator_parameter
   24                  | T_OPERATOR
   25                  | T_LABEL '(' assembler_argument_list ')'
   26                  | %empty

   27 assembler_argument_list: operator_parameter ',' assembler_argument_list
   28                        | operator_parameter
   29                        | %empty

   30 operator_parameter: T_REGISTER
   31                   | '[' T_REGISTER ']'
   32                   | T_CONSTANT_LONG

   33 expression_statement: ';'
   34                     | expression ';'

   35 buildin_statement: T_NOP ';'
   36                  | T_DBG_PRINT_REGS ';'
   37                  | T_BREAK ';'
   38                  | T_CONTINUE ';'
   39                  | T_BREAK T_CONSTANT_LONG ';'
   40                  | T_CONTINUE T_CONSTANT_LONG ';'
   41                  | T_RETURN ';'
   42                  | T_RETURN assignment_expression ';'

   43 $@2: %empty

   44 selection_statement: T_IF '(' assignment_expression ')' $@2 statement else_statement

   45 $@3: %empty

   46 $@4: %empty

   47 selection_statement: T_WHILE $@3 '(' assignment_expression ')' $@4 statement

   48 $@5: %empty

   49 $@6: %empty

   50 $@7: %empty

   51 selection_statement: T_DO $@5 statement T_WHILE $@6 '(' assignment_expression ')' $@7 ';'

   52 $@8: %empty

   53 $@9: %empty

   54 $@10: %empty

   55 selection_statement: T_FOR '(' expression ';' $@8 expression ';' $@9 expression ')' $@10 statement

   56 else_statement: %empty

   57 $@11: %empty

   58 else_statement: T_ELSE $@11 statement

   59 labeled_statement: T_LABEL ':'

   60 jump_statement: T_GOTO T_LABEL ';'

   61 declaration_function: T_IMPORT T_CONSTANT_LONG T_LABEL '(' T_CONSTANT_LONG ')' ';'
   62                     | T_IMPORT T_CONSTANT_LONG T_LABEL '(' T_CONSTANT_LONG ')' T_FROM T_CONSTANT_STRING ';'

   63 $@12: %empty

   64 $@13: %empty

   65 declaration_function: T_FUNCTION T_LABEL '(' $@12 function_args ')' $@13 compound_statement

   66 function_args: function_arg
   67              | function_arg ',' function_args
   68              | %empty

   69 $@14: %empty

   70 function_arg: declaration_specifiers $@14 declarator

   71 $@15: %empty

   72 declaration_statement: declaration_specifiers $@15 init_declarator_list ';'

   73 declaration_specifiers: type_specifier
   74                       | type_specifier declaration_specifiers

   75 type_specifier: T_VOID
   76               | T_CHAR
   77               | T_SHORT
   78               | T_INT
   79               | T_LONG
   80               | T_FLOAT
   81               | T_DOUBLE
   82               | T_SIGNED
   83               | T_UNSIGNED
   84               | T_EXTERN

   85 init_declarator_list: init_declarator
   86                     | init_declarator_list ',' init_declarator

   87 init_declarator: declarator

   88 $@16: %empty

   89 init_declarator: declarator '=' $@16 initializer

   90 pointer: '*'
   91        | '*' pointer

   92 declarator: pointer direct_declarator
   93           | direct_declarator

   94 direct_declarator: T_LABEL
   95                  | direct_declarator '[' const_expr ']'
   96                  | direct_declarator '[' ']'
   97                  | '(' declarator ')'

   98 initializer: assignment_expression
   99            | '{' initializer_list '}'

  100 initializer_list: initializer

  101 $@17: %empty

  102 initializer_list: initializer ',' $@17 initializer_list

  103 expression: assignment_expression
  104           | assignment_expression ',' expression

  105 argument_expression_list: %empty
  106                         | assignment_expression
  107                         | assignment_expression ',' argument_expression_list

  108 assignment_expression: expr
  109                      | unary_expression '=' assignment_expression
  110                      | unary_expression T_ADD_ASSIGN assignment_expression
  111                      | unary_expression T_SUB_ASSIGN assignment_expression
  112                      | unary_expression T_MUL_ASSIGN assignment_expression
  113                      | unary_expression T_DIV_ASSIGN assignment_expression
  114                      | unary_expression T_MOD_ASSIGN assignment_expression
  115                      | unary_expression T_SHL_ASSIGN assignment_expression
  116                      | unary_expression T_SHR_ASSIGN assignment_expression
  117                      | unary_expression T_AND_ASSIGN assignment_expression
  118                      | unary_expression T_XOR_ASSIGN assignment_expression
  119                      | unary_expression T_OR_ASSIGN assignment_expression

  120 unary_expression: T_LABEL
  121                 | '*' unary_expression
  122                 | unary_expression '[' assignment_expression ']'

  123 cast_expression: declaration_specifiers
  124                | declaration_specifiers pointer

  125 expr: T_CONSTANT_LONG
  126     | T_CONSTANT_STRING
  127     | '(' expr ')'
  128     | expr '+' expr
  129     | expr '-' expr
  130     | expr '*' expr
  131     | expr '/' expr
  132     | expr '|' expr
  133     | expr '&' expr
  134     | expr '%' expr
  135     | expr '^' expr
  136     | expr T_SHL expr
  137     | expr T_SHR expr
  138     | expr '>' expr
  139     | expr '<' expr
  140     | expr T_GE expr
  141     | expr T_LE expr
  142     | expr T_EQ expr
  143     | expr T_NE expr

  144 $@18: %empty

  145 expr: expr T_OR $@18 expr

  146 $@19: %empty

  147 expr: expr T_AND $@19 expr

  148 $@20: %empty

  149 $@21: %empty

  150 expr: expr '?' $@20 expr ':' $@21 expr
  151     | '~' expr
  152     | '!' expr
  153     | '+' expr
  154     | '-' expr
  155     | '&' unary_expression
  156     | unary_expression T_INC
  157     | unary_expression T_DEC
  158     | T_INC unary_expression
  159     | T_DEC unary_expression
  160     | T_LABEL '(' argument_expression_list ')'
  161     | unary_expression
  162     | T_SIZEOF '(' declaration_specifiers ')'

  163 $@22: %empty

  164 expr: T_SIZEOF '(' $@22 unary_expression ')'
  165     | T_TYPEOF '(' declaration_specifiers ')'

  166 $@23: %empty

  167 expr: T_TYPEOF '(' $@23 unary_expression ')'
  168     | '(' cast_expression ')' unary_expression

  169 const_expr: T_CONSTANT_LONG
  170           | '(' const_expr ')'
  171           | const_expr '+' const_expr
  172           | const_expr '-' const_expr
  173           | const_expr '*' const_expr
  174           | const_expr '/' const_expr
  175           | const_expr '|' const_expr
  176           | const_expr '&' const_expr
  177           | const_expr '%' const_expr
  178           | const_expr '^' const_expr
  179           | const_expr T_SHL const_expr
  180           | const_expr T_SHR const_expr
  181           | const_expr '>' const_expr
  182           | const_expr '<' const_expr
  183           | const_expr T_GE const_expr
  184           | const_expr T_LE const_expr
  185           | const_expr T_EQ const_expr
  186           | const_expr T_NE const_expr
  187           | const_expr T_OR const_expr
  188           | const_expr T_AND const_expr
  189           | const_expr '?' const_expr ':' const_expr
  190           | '~' const_expr
  191           | '!' const_expr
  192           | '+' const_expr
  193           | '-' const_expr
  194           | T_SIZEOF '(' declaration_specifiers ')'

  195 $@24: %empty

  196 const_expr: T_SIZEOF '(' $@24 unary_expression ')'
  197           | T_TYPEOF '(' declaration_specifiers ')'

  198 $@25: %empty

  199 const_expr: T_TYPEOF '(' $@25 unary_expression ')'


Terminals, with rules where they appear

$end (0) 0
'\n' (10) 18
'!' (33) 152 191
'%' (37) 134 177
'&' (38) 133 155 176
'(' (40) 25 44 47 51 55 61 62 65 97 127 160 162 164 165 167 168 170
    194 196 197 199
')' (41) 25 44 47 51 55 61 62 65 97 127 160 162 164 165 167 168 170
    194 196 197 199
'*' (42) 90 91 121 130 173
'+' (43) 128 153 171 192
',' (44) 22 27 67 86 102 104 107
'-' (45) 129 154 172 193
'.' (46)
'/' (47) 131 174
':' (58) 59 150 189
';' (59) 33 34 35 36 37 38 39 40 41 42 51 55 60 61 62 72
'<' (60) 139 182
'=' (61) 89 109
'>' (62) 138 181
'?' (63) 150 189
'@' (64)
'[' (91) 31 95 96 122
']' (93) 31 95 96 122
'^' (94) 135 178
'{' (123) 16 99
'|' (124) 132 175
'}' (125) 16 17 99
'~' (126) 151 190
error (256)
T_OR_ASSIGN (258) 119
T_XOR_ASSIGN (259) 118
T_SHL_ASSIGN (260) 115
T_SHR_ASSIGN (261) 116
T_ADD_ASSIGN (262) 110
T_MOD_ASSIGN (263) 114
T_DIV_ASSIGN (264) 113
T_MUL_ASSIGN (265) 112
T_SUB_ASSIGN (266) 111
T_AND_ASSIGN (267) 117
T_OR (268) 145 187
T_AND (269) 147 188
T_EQ (270) 142 185
T_NE (271) 143 186
T_LE (272) 141 184
T_GE (273) 140 183
T_SHL (274) 136 179
T_SHR (275) 137 180
T_INC (276) 156 158
T_DEC (277) 157 159
T_PLUS (278)
T_MINUS (279)
T_POINTER (280)
T_IF (281) 44
T_ELSE (282) 58
T_PTR_OP (283)
T_WHILE (284) 47 51
T_DO (285) 51
T_BREAK (286) 37 39
T_CONTINUE (287) 38 40
T_FOR (288) 55
T_LABEL (289) 21 25 59 60 61 62 65 94 120 160
T_CONSTANT_DOUBLE (290)
T_CONSTANT_LONG (291) 32 39 40 61 62 125 169
T_CONSTANT_STRING (292) 62 126
T_VOID (293) 75
T_CHAR (294) 76
T_SHORT (295) 77
T_INT (296) 78
T_LONG (297) 79
T_FLOAT (298) 80
T_DOUBLE (299) 81
T_SIGNED (300) 82
T_UNSIGNED (301) 83
T_STRUCT (302)
T_STRUCT_DEFINED (303)
T_ELLIPSIS (304)
T_STRING (305)
T_EXTERN (306) 84
T_VAR (307)
T_IMPORT (308) 61 62
T_FROM (309) 62
T_GOTO (310) 21 60
T_SIZEOF (311) 162 164 194 196
T_TYPEOF (312) 165 167 197 199
T_RETURN (313) 41 42
T_REGISTER (314) 30 31
T_OPERATOR (315) 22 23 24
T_ASM (316) 17
T_PARAM_SEPARATOR (317)
T_NOP (318) 35
T_DBG_PRINT_REGS (319) 36
T_FUNCTION (320) 65


Nonterminals, with rules where they appear

$accept (92)
    on left: 0
program_list (93)
    on left: 1 2, on right: 0 1
program (94)
    on left: 3 4, on right: 1
statement_list (95)
    on left: 5 6, on right: 5 16
statement (96)
    on left: 7 8 9 10 11 12 13 14, on right: 5 44 47 51 55 58
compound_statement (97)
    on left: 16, on right: 7 65
$@1 (98)
    on left: 15, on right: 16
assembler_statement (99)
    on left: 17, on right: 14
assembler_command_list (100)
    on left: 18 19 20, on right: 17 18 19
assembler_command (101)
    on left: 21 22 23 24 25 26, on right: 18 20
assembler_argument_list (102)
    on left: 27 28 29, on right: 25 27
operator_parameter (103)
    on left: 30 31 32, on right: 22 23 27 28
expression_statement (104)
    on left: 33 34, on right: 8
buildin_statement (105)
    on left: 35 36 37 38 39 40 41 42, on right: 9
selection_statement (106)
    on left: 44 47 51 55, on right: 10
$@2 (107)
    on left: 43, on right: 44
$@3 (108)
    on left: 45, on right: 47
$@4 (109)
    on left: 46, on right: 47
$@5 (110)
    on left: 48, on right: 51
$@6 (111)
    on left: 49, on right: 51
$@7 (112)
    on left: 50, on right: 51
$@8 (113)
    on left: 52, on right: 55
$@9 (114)
    on left: 53, on right: 55
$@10 (115)
    on left: 54, on right: 55
else_statement (116)
    on left: 56 58, on right: 44
$@11 (117)
    on left: 57, on right: 58
labeled_statement (118)
    on left: 59, on right: 11 19
jump_statement (119)
    on left: 60, on right: 12
declaration_function (120)
    on left: 61 62 65, on right: 4
$@12 (121)
    on left: 63, on right: 65
$@13 (122)
    on left: 64, on right: 65
function_args (123)
    on left: 66 67 68, on right: 65 67
function_arg (124)
    on left: 70, on right: 66 67
$@14 (125)
    on left: 69, on right: 70
declaration_statement (126)
    on left: 72, on right: 3 13
$@15 (127)
    on left: 71, on right: 72
declaration_specifiers (128)
    on left: 73 74, on right: 70 72 74 123 124 162 165 194 197
type_specifier (129)
    on left: 75 76 77 78 79 80 81 82 83 84, on right: 73 74
init_declarator_list (130)
    on left: 85 86, on right: 72 86
init_declarator (131)
    on left: 87 89, on right: 85 86
$@16 (132)
    on left: 88, on right: 89
pointer (133)
    on left: 90 91, on right: 91 92 124
declarator (134)
    on left: 92 93, on right: 70 87 89 97
direct_declarator (135)
    on left: 94 95 96 97, on right: 92 93 95 96
initializer (136)
    on left: 98 99, on right: 89 100 102
initializer_list (137)
    on left: 100 102, on right: 99 102
$@17 (138)
    on left: 101, on right: 102
expression (139)
    on left: 103 104, on right: 34 55 104
argument_expression_list (140)
    on left: 105 106 107, on right: 107 160
assignment_expression (141)
    on left: 108 109 110 111 112 113 114 115 116 117 118 119, on right:
    42 44 47 51 98 103 104 106 107 109 110 111 112 113 114 115 116
    117 118 119 122
unary_expression (142)
    on left: 120 121 122, on right: 109 110 111 112 113 114 115 116
    117 118 119 121 122 155 156 157 158 159 161 164 167 168 196 199
cast_expression (143)
    on left: 123 124, on right: 168
expr (144)
    on left: 125 126 127 128 129 130 131 132 133 134 135 136 137 138
    139 140 141 142 143 145 147 150 151 152 153 154 155 156 157 158
    159 160 161 162 164 165 167 168, on right: 108 127 128 129 130
    131 132 133 134 135 136 137 138 139 140 141 142 143 145 147 150
    151 152 153 154
$@18 (145)
    on left: 144, on right: 145
$@19 (146)
    on left: 146, on right: 147
$@20 (147)
    on left: 148, on right: 150
$@21 (148)
    on left: 149, on right: 150
$@22 (149)
    on left: 163, on right: 164
$@23 (150)
    on left: 166, on right: 167
const_expr (151)
    on left: 169 170 171 172 173 174 175 176 177 178 179 180 181 182
    183 184 185 186 187 188 189 190 191 192 193 194 196 197 199, on right:
    95 170 171 172 173 174 175 176 177 178 179 180 181 182 183 184
    185 186 187 188 189 190 191 192 193
$@24 (152)
    on left: 195, on right: 196
$@25 (153)
    on left: 198, on right: 199


State 0

    0 $accept: . program_list $end
    1 program_list: . program program_list
    2             | . %empty  [$end]
    3 program: . declaration_statement
    4        | . declaration_function
   61 declaration_function: . T_IMPORT T_CONSTANT_LONG T_LABEL '(' T_CONSTANT_LONG ')' ';'
   62                     | . T_IMPORT T_CONSTANT_LONG T_LABEL '(' T_CONSTANT_LONG ')' T_FROM T_CONSTANT_STRING ';'
   65                     | . T_FUNCTION T_LABEL '(' $@12 function_args ')' $@13 compound_statement
   72 declaration_statement: . declaration_specifiers $@15 init_declarator_list ';'
   73 declaration_specifiers: . type_specifier
   74                       | . type_specifier declaration_specifiers
   75 type_specifier: . T_VOID
   76               | . T_CHAR
   77               | . T_SHORT
   78               | . T_INT
   79               | . T_LONG
   80               | . T_FLOAT
   81               | . T_DOUBLE
   82               | . T_SIGNED
   83               | . T_UNSIGNED
   84               | . T_EXTERN

    T_VOID      shift, and go to state 1
    T_CHAR      shift, and go to state 2
    T_SHORT     shift, and go to state 3
    T_INT       shift, and go to state 4
    T_LONG      shift, and go to state 5
    T_FLOAT     shift, and go to state 6
    T_DOUBLE    shift, and go to state 7
    T_SIGNED    shift, and go to state 8
    T_UNSIGNED  shift, and go to state 9
    T_EXTERN    shift, and go to state 10
    T_IMPORT    shift, and go to state 11
    T_FUNCTION  shift, and go to state 12

    $default  reduce using rule 2 (program_list)

    program_list            go to state 13
    program                 go to state 14
    declaration_function    go to state 15
    declaration_statement   go to state 16
    declaration_specifiers  go to state 17
    type_specifier          go to state 18


State 1

   75 type_specifier: T_VOID .

    $default  reduce using rule 75 (type_specifier)


State 2

   76 type_specifier: T_CHAR .

    $default  reduce using rule 76 (type_specifier)


State 3

   77 type_specifier: T_SHORT .

    $default  reduce using rule 77 (type_specifier)


State 4

   78 type_specifier: T_INT .

    $default  reduce using rule 78 (type_specifier)


State 5

   79 type_specifier: T_LONG .

    $default  reduce using rule 79 (type_specifier)


State 6

   80 type_specifier: T_FLOAT .

    $default  reduce using rule 80 (type_specifier)


State 7

   81 type_specifier: T_DOUBLE .

    $default  reduce using rule 81 (type_specifier)


State 8

   82 type_specifier: T_SIGNED .

    $default  reduce using rule 82 (type_specifier)


State 9

   83 type_specifier: T_UNSIGNED .

    $default  reduce using rule 83 (type_specifier)


State 10

   84 type_specifier: T_EXTERN .

    $default  reduce using rule 84 (type_specifier)


State 11

   61 declaration_function: T_IMPORT . T_CONSTANT_LONG T_LABEL '(' T_CONSTANT_LONG ')' ';'
   62                     | T_IMPORT . T_CONSTANT_LONG T_LABEL '(' T_CONSTANT_LONG ')' T_FROM T_CONSTANT_STRING ';'

    T_CONSTANT_LONG  shift, and go to state 19


State 12

   65 declaration_function: T_FUNCTION . T_LABEL '(' $@12 function_args ')' $@13 compound_statement

    T_LABEL  shift, and go to state 20


State 13

    0 $accept: program_list . $end

    $end  shift, and go to state 21


State 14

    1 program_list: . program program_list
    1             | program . program_list
    2             | . %empty  [$end]
    3 program: . declaration_statement
    4        | . declaration_function
   61 declaration_function: . T_IMPORT T_CONSTANT_LONG T_LABEL '(' T_CONSTANT_LONG ')' ';'
   62                     | . T_IMPORT T_CONSTANT_LONG T_LABEL '(' T_CONSTANT_LONG ')' T_FROM T_CONSTANT_STRING ';'
   65                     | . T_FUNCTION T_LABEL '(' $@12 function_args ')' $@13 compound_statement
   72 declaration_statement: . declaration_specifiers $@15 init_declarator_list ';'
   73 declaration_specifiers: . type_specifier
   74                       | . type_specifier declaration_specifiers
   75 type_specifier: . T_VOID
   76               | . T_CHAR
   77               | . T_SHORT
   78               | . T_INT
   79               | . T_LONG
   80               | . T_FLOAT
   81               | . T_DOUBLE
   82               | . T_SIGNED
   83               | . T_UNSIGNED
   84               | . T_EXTERN

    T_VOID      shift, and go to state 1
    T_CHAR      shift, and go to state 2
    T_SHORT     shift, and go to state 3
    T_INT       shift, and go to state 4
    T_LONG      shift, and go to state 5
    T_FLOAT     shift, and go to state 6
    T_DOUBLE    shift, and go to state 7
    T_SIGNED    shift, and go to state 8
    T_UNSIGNED  shift, and go to state 9
    T_EXTERN    shift, and go to state 10
    T_IMPORT    shift, and go to state 11
    T_FUNCTION  shift, and go to state 12

    $default  reduce using rule 2 (program_list)

    program_list            go to state 22
    program                 go to state 14
    declaration_function    go to state 15
    declaration_statement   go to state 16
    declaration_specifiers  go to state 17
    type_specifier          go to state 18


State 15

    4 program: declaration_function .

    $default  reduce using rule 4 (program)


State 16

    3 program: declaration_statement .

    $default  reduce using rule 3 (program)


State 17

   71 $@15: . %empty
   72 declaration_statement: declaration_specifiers . $@15 init_declarator_list ';'

    $default  reduce using rule 71 ($@15)

    $@15  go to state 23


State 18

   73 declaration_specifiers: . type_specifier
   73                       | type_specifier .  ['*', T_LABEL, '(', ')']
   74                       | . type_specifier declaration_specifiers
   74                       | type_specifier . declaration_specifiers
   75 type_specifier: . T_VOID
   76               | . T_CHAR
   77               | . T_SHORT
   78               | . T_INT
   79               | . T_LONG
   80               | . T_FLOAT
   81               | . T_DOUBLE
   82               | . T_SIGNED
   83               | . T_UNSIGNED
   84               | . T_EXTERN

    T_VOID      shift, and go to state 1
    T_CHAR      shift, and go to state 2
    T_SHORT     shift, and go to state 3
    T_INT       shift, and go to state 4
    T_LONG      shift, and go to state 5
    T_FLOAT     shift, and go to state 6
    T_DOUBLE    shift, and go to state 7
    T_SIGNED    shift, and go to state 8
    T_UNSIGNED  shift, and go to state 9
    T_EXTERN    shift, and go to state 10

    $default  reduce using rule 73 (declaration_specifiers)

    declaration_specifiers  go to state 24
    type_specifier          go to state 18


State 19

   61 declaration_function: T_IMPORT T_CONSTANT_LONG . T_LABEL '(' T_CONSTANT_LONG ')' ';'
   62                     | T_IMPORT T_CONSTANT_LONG . T_LABEL '(' T_CONSTANT_LONG ')' T_FROM T_CONSTANT_STRING ';'

    T_LABEL  shift, and go to state 25


State 20

   65 declaration_function: T_FUNCTION T_LABEL . '(' $@12 function_args ')' $@13 compound_statement

    '('  shift, and go to state 26


State 21

    0 $accept: program_list $end .

    $default  accept


State 22

    1 program_list: program program_list .

    $default  reduce using rule 1 (program_list)


State 23

   72 declaration_statement: declaration_specifiers $@15 . init_declarator_list ';'
   85 init_declarator_list: . init_declarator
   86                     | . init_declarator_list ',' init_declarator
   87 init_declarator: . declarator
   89                | . declarator '=' $@16 initializer
   90 pointer: . '*'
   91        | . '*' pointer
   92 declarator: . pointer direct_declarator
   93           | . direct_declarator
   94 direct_declarator: . T_LABEL
   95                  | . direct_declarator '[' const_expr ']'
   96                  | . direct_declarator '[' ']'
   97                  | . '(' declarator ')'

    '*'      shift, and go to state 27
    T_LABEL  shift, and go to state 28
    '('      shift, and go to state 29

    init_declarator_list  go to state 30
    init_declarator       go to state 31
    pointer               go to state 32
    declarator            go to state 33
    direct_declarator     go to state 34


State 24

   74 declaration_specifiers: type_specifier declaration_specifiers .

    $default  reduce using rule 74 (declaration_specifiers)


State 25

   61 declaration_function: T_IMPORT T_CONSTANT_LONG T_LABEL . '(' T_CONSTANT_LONG ')' ';'
   62                     | T_IMPORT T_CONSTANT_LONG T_LABEL . '(' T_CONSTANT_LONG ')' T_FROM T_CONSTANT_STRING ';'

    '('  shift, and go to state 35


State 26

   63 $@12: . %empty
   65 declaration_function: T_FUNCTION T_LABEL '(' . $@12 function_args ')' $@13 compound_statement

    $default  reduce using rule 63 ($@12)

    $@12  go to state 36


State 27

   90 pointer: . '*'
   90        | '*' .  [T_LABEL, '(', ')']
   91        | . '*' pointer
   91        | '*' . pointer

    '*'  shift, and go to state 27

    $default  reduce using rule 90 (pointer)

    pointer  go to state 37


State 28

   94 direct_declarator: T_LABEL .

    $default  reduce using rule 94 (direct_declarator)


State 29

   90 pointer: . '*'
   91        | . '*' pointer
   92 declarator: . pointer direct_declarator
   93           | . direct_declarator
   94 direct_declarator: . T_LABEL
   95                  | . direct_declarator '[' const_expr ']'
   96                  | . direct_declarator '[' ']'
   97                  | . '(' declarator ')'
   97                  | '(' . declarator ')'

    '*'      shift, and go to state 27
    T_LABEL  shift, and go to state 28
    '('      shift, and go to state 29

    pointer            go to state 32
    declarator         go to state 38
    direct_declarator  go to state 34


State 30

   72 declaration_statement: declaration_specifiers $@15 init_declarator_list . ';'
   86 init_declarator_list: init_declarator_list . ',' init_declarator

    ','  shift, and go to state 39
    ';'  shift, and go to state 40


State 31

   85 init_declarator_list: init_declarator .

    $default  reduce using rule 85 (init_declarator_list)


State 32

   92 declarator: pointer . direct_declarator
   94 direct_declarator: . T_LABEL
   95                  | . direct_declarator '[' const_expr ']'
   96                  | . direct_declarator '[' ']'
   97                  | . '(' declarator ')'

    T_LABEL  shift, and go to state 28
    '('      shift, and go to state 29

    direct_declarator  go to state 41


State 33

   87 init_declarator: declarator .  [',', ';']
   89                | declarator . '=' $@16 initializer

    '='  shift, and go to state 42

    $default  reduce using rule 87 (init_declarator)


State 34

   93 declarator: direct_declarator .  [',', '=', ')', ';']
   95 direct_declarator: direct_declarator . '[' const_expr ']'
   96                  | direct_declarator . '[' ']'

    '['  shift, and go to state 43

    $default  reduce using rule 93 (declarator)


State 35

   61 declaration_function: T_IMPORT T_CONSTANT_LONG T_LABEL '(' . T_CONSTANT_LONG ')' ';'
   62                     | T_IMPORT T_CONSTANT_LONG T_LABEL '(' . T_CONSTANT_LONG ')' T_FROM T_CONSTANT_STRING ';'

    T_CONSTANT_LONG  shift, and go to state 44


State 36

   65 declaration_function: T_FUNCTION T_LABEL '(' $@12 . function_args ')' $@13 compound_statement
   66 function_args: . function_arg
   67              | . function_arg ',' function_args
   68              | . %empty  [')']
   70 function_arg: . declaration_specifiers $@14 declarator
   73 declaration_specifiers: . type_specifier
   74                       | . type_specifier declaration_specifiers
   75 type_specifier: . T_VOID
   76               | . T_CHAR
   77               | . T_SHORT
   78               | . T_INT
   79               | . T_LONG
   80               | . T_FLOAT
   81               | . T_DOUBLE
   82               | . T_SIGNED
   83               | . T_UNSIGNED
   84               | . T_EXTERN

    T_VOID      shift, and go to state 1
    T_CHAR      shift, and go to state 2
    T_SHORT     shift, and go to state 3
    T_INT       shift, and go to state 4
    T_LONG      shift, and go to state 5
    T_FLOAT     shift, and go to state 6
    T_DOUBLE    shift, and go to state 7
    T_SIGNED    shift, and go to state 8
    T_UNSIGNED  shift, and go to state 9
    T_EXTERN    shift, and go to state 10

    $default  reduce using rule 68 (function_args)

    function_args           go to state 45
    function_arg            go to state 46
    declaration_specifiers  go to state 47
    type_specifier          go to state 18


State 37

   91 pointer: '*' pointer .

    $default  reduce using rule 91 (pointer)


State 38

   97 direct_declarator: '(' declarator . ')'

    ')'  shift, and go to state 48


State 39

   86 init_declarator_list: init_declarator_list ',' . init_declarator
   87 init_declarator: . declarator
   89                | . declarator '=' $@16 initializer
   90 pointer: . '*'
   91        | . '*' pointer
   92 declarator: . pointer direct_declarator
   93           | . direct_declarator
   94 direct_declarator: . T_LABEL
   95                  | . direct_declarator '[' const_expr ']'
   96                  | . direct_declarator '[' ']'
   97                  | . '(' declarator ')'

    '*'      shift, and go to state 27
    T_LABEL  shift, and go to state 28
    '('      shift, and go to state 29

    init_declarator    go to state 49
    pointer            go to state 32
    declarator         go to state 33
    direct_declarator  go to state 34


State 40

   72 declaration_statement: declaration_specifiers $@15 init_declarator_list ';' .

    $default  reduce using rule 72 (declaration_statement)


State 41

   92 declarator: pointer direct_declarator .  [',', '=', ')', ';']
   95 direct_declarator: direct_declarator . '[' const_expr ']'
   96                  | direct_declarator . '[' ']'

    '['  shift, and go to state 43

    $default  reduce using rule 92 (declarator)


State 42

   88 $@16: . %empty
   89 init_declarator: declarator '=' . $@16 initializer

    $default  reduce using rule 88 ($@16)

    $@16  go to state 50


State 43

   95 direct_declarator: direct_declarator '[' . const_expr ']'
   96                  | direct_declarator '[' . ']'
  169 const_expr: . T_CONSTANT_LONG
  170           | . '(' const_expr ')'
  171           | . const_expr '+' const_expr
  172           | . const_expr '-' const_expr
  173           | . const_expr '*' const_expr
  174           | . const_expr '/' const_expr
  175           | . const_expr '|' const_expr
  176           | . const_expr '&' const_expr
  177           | . const_expr '%' const_expr
  178           | . const_expr '^' const_expr
  179           | . const_expr T_SHL const_expr
  180           | . const_expr T_SHR const_expr
  181           | . const_expr '>' const_expr
  182           | . const_expr '<' const_expr
  183           | . const_expr T_GE const_expr
  184           | . const_expr T_LE const_expr
  185           | . const_expr T_EQ const_expr
  186           | . const_expr T_NE const_expr
  187           | . const_expr T_OR const_expr
  188           | . const_expr T_AND const_expr
  189           | . const_expr '?' const_expr ':' const_expr
  190           | . '~' const_expr
  191           | . '!' const_expr
  192           | . '+' const_expr
  193           | . '-' const_expr
  194           | . T_SIZEOF '(' declaration_specifiers ')'
  196           | . T_SIZEOF '(' $@24 unary_expression ')'
  197           | . T_TYPEOF '(' declaration_specifiers ')'
  199           | . T_TYPEOF '(' $@25 unary_expression ')'

    '+'              shift, and go to state 51
    '-'              shift, and go to state 52
    '!'              shift, and go to state 53
    '~'              shift, and go to state 54
    T_CONSTANT_LONG  shift, and go to state 55
    T_SIZEOF         shift, and go to state 56
    T_TYPEOF         shift, and go to state 57
    '('              shift, and go to state 58
    ']'              shift, and go to state 59

    const_expr  go to state 60


State 44

   61 declaration_function: T_IMPORT T_CONSTANT_LONG T_LABEL '(' T_CONSTANT_LONG . ')' ';'
   62                     | T_IMPORT T_CONSTANT_LONG T_LABEL '(' T_CONSTANT_LONG . ')' T_FROM T_CONSTANT_STRING ';'

    ')'  shift, and go to state 61


State 45

   65 declaration_function: T_FUNCTION T_LABEL '(' $@12 function_args . ')' $@13 compound_statement

    ')'  shift, and go to state 62


State 46

   66 function_args: function_arg .  [')']
   67              | function_arg . ',' function_args

    ','  shift, and go to state 63

    $default  reduce using rule 66 (function_args)


State 47

   69 $@14: . %empty
   70 function_arg: declaration_specifiers . $@14 declarator

    $default  reduce using rule 69 ($@14)

    $@14  go to state 64


State 48

   97 direct_declarator: '(' declarator ')' .

    $default  reduce using rule 97 (direct_declarator)


State 49

   86 init_declarator_list: init_declarator_list ',' init_declarator .

    $default  reduce using rule 86 (init_declarator_list)


State 50
